[gd_scene load_steps=12 format=3 uid="uid://c2kg62qhj02ge"]

[ext_resource type="PackedScene" uid="uid://dtychq0oe4wgv" path="res://Scenes/Player.tscn" id="1_lcq8e"]
[ext_resource type="Script" path="res://Scripts/World.gd" id="1_m730k"]
[ext_resource type="Texture2D" uid="uid://cbke4ynf34jrc" path="res://Sprites/Tiles/Grass.png" id="2_ty260"]
[ext_resource type="Texture2D" uid="uid://5gdodqa2hjef" path="res://Sprites/Crops/Crop_Wheat.png" id="4_mkkrp"]
[ext_resource type="Texture2D" uid="uid://i3de38r8xebg" path="res://Sprites/Tiles/keeney_tiny_town.png" id="5_wndyd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qek84"]
texture = ExtResource("2_ty260")
texture_region_size = Vector2i(12, 12)
0:0/0 = 0
1:0/0 = 0
1:0/0/custom_data_0 = true
1:0/0/custom_data_2 = true
2:0/0 = 0
2:0/0/custom_data_0 = true
2:0/0/custom_data_4 = true

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2d3m6"]
texture = ExtResource("4_mkkrp")
texture_region_size = Vector2i(13, 13)
0:0/0 = 0
0:0/0/custom_data_1 = true
1:0/0 = 0
1:0/0/custom_data_1 = true
1:0/0/custom_data_3 = 1
2:0/0 = 0
2:0/0/custom_data_1 = true
2:0/0/custom_data_3 = 2
3:0/0 = 0
3:0/0/custom_data_1 = true
3:0/0/custom_data_3 = 3
3:0/0/custom_data_5 = true

[sub_resource type="TileSet" id="TileSet_lamyc"]
tile_size = Vector2i(12, 12)
custom_data_layer_0/name = "can_place_seeds"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "has_seeds"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "can_water"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "seed_level"
custom_data_layer_3/type = 2
custom_data_layer_4/name = "has_been_watered"
custom_data_layer_4/type = 1
custom_data_layer_5/name = "can_harvest"
custom_data_layer_5/type = 1
sources/0 = SubResource("TileSetAtlasSource_qek84")
sources/1 = SubResource("TileSetAtlasSource_2d3m6")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2h3ah"]
texture = ExtResource("5_wndyd")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_o3esv"]
sources/0 = SubResource("TileSetAtlasSource_2h3ah")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ipol1"]

[node name="World" type="Node2D"]
script = ExtResource("1_m730k")
metadata/_edit_horizontal_guides_ = [-96.0, 96.0, -132.0]
metadata/_edit_vertical_guides_ = [-156.0, 156.0, 156.0, -192.0, -192.0, -192.0, -192.0]

[node name="Player" parent="." instance=ExtResource("1_lcq8e")]
z_index = 2

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lamyc")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(-2, 65536, 0, 65534, 0, 0, 131070, 65536, 0, 131071, 0, 0, 65536, 0, 0, 65537, 65536, 0, 1, 0, 0, -65535, 65536, 0, -65536, 0, 0, -1, 0, 0, 65535, 0, 0, 0, 0, 0, -131071, 0, 0, -131072, 0, 0, -65537, 0, 0, -65538, 0, 0, -65539, 0, 0, -3, 65536, 0, 65533, 0, 0, 131069, 65536, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 65538, 65536, 0, 2, 0, 0, -65534, 65536, 0, -131070, 0, 0, -196606, 0, 0, -196607, 65536, 0, -196608, 0, 0, -131073, 0, 0, -131074, 65536, 0, -131075, 0, 0, -196612, 0, 0, -131076, 0, 0, -65540, 0, 0, -4, 65536, 0, 65532, 0, 0, 131068, 65536, 0, 196604, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 65536, 0, 262143, 0, 0, 196608, 0, 0, 196609, 65536, 0, 196610, 0, 0, 196611, 0, 0, 131075, 0, 0, 65539, 65536, 0, 3, 0, 0, -65533, 65536, 0, -131069, 0, 0, -196605, 0, 0, -262141, 0, 0, -262142, 0, 0, -262143, 65536, 0, -262144, 0, 0, -196609, 0, 0, -196610, 65536, 0, -196611, 0, 0, -262149, 0, 0, -196613, 0, 0, -131077, 0, 0, -65541, 0, 0, -5, 0, 0, 65531, 0, 0, 131067, 0, 0, 196603, 0, 0, 262139, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 65536, 0, 327679, 0, 0, 262144, 0, 0, 262145, 65536, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 196612, 0, 0, 131076, 0, 0, 65540, 0, 0, 4, 0, 0, -65532, 0, 0, -131068, 0, 0, -196604, 0, 0, -262140, 0, 0, -327676, 0, 0, -327677, 0, 0, -327678, 0, 0, -327679, 65536, 0, -327680, 0, 0, -262145, 0, 0, -262146, 65536, 0, -262147, 0, 0, -262148, 0, 0, -327686, 0, 0, -262150, 0, 0, -196614, 0, 0, -131078, 0, 0, -65542, 0, 0, -6, 0, 0, 65530, 0, 0, 131066, 0, 0, 196602, 0, 0, 262138, 0, 0, 327674, 0, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 65536, 0, 393215, 0, 0, 327680, 0, 0, 327681, 65536, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 262149, 0, 0, 196613, 0, 0, 131077, 0, 0, 65541, 0, 0, 5, 0, 0, -65531, 0, 0, -131067, 0, 0, -196603, 0, 0, -262139, 0, 0, -327675, 0, 0, -393211, 0, 0, -393212, 0, 0, -393213, 0, 0, -393214, 0, 0, -393215, 0, 0, -393216, 0, 0, -327681, 0, 0, -327682, 0, 0, -327683, 0, 0, -327684, 0, 0, -327685, 0, 0, -458765, 0, 0, -393229, 0, 0, -327693, 0, 0, -262157, 0, 0, -196621, 0, 0, -131085, 0, 0, -65549, 0, 0, -13, 0, 0, 65523, 0, 0, 131059, 0, 0, 196595, 0, 0, 262131, 0, 0, 327667, 0, 0, 393203, 0, 0, 458739, 0, 0, 524275, 0, 0, 524276, 0, 0, 524277, 0, 0, 524278, 0, 0, 524279, 0, 0, 524280, 0, 0, 524281, 0, 0, 524282, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 0, 0, 196620, 0, 0, 131084, 0, 0, 65548, 0, 0, 12, 0, 0, -65524, 0, 0, -131060, 0, 0, -196596, 0, 0, -262132, 0, 0, -327668, 0, 0, -393204, 0, 0, -458740, 0, 0, -524276, 0, 0, -524277, 0, 0, -524278, 0, 0, -524279, 0, 0, -524280, 0, 0, -524281, 0, 0, -524282, 0, 0, -524283, 0, 0, -524284, 0, 0, -524285, 0, 0, -524286, 0, 0, -524287, 0, 0, -524288, 0, 0, -458753, 0, 0, -458754, 0, 0, -458755, 0, 0, -458756, 0, 0, -458757, 0, 0, -458758, 0, 0, -458759, 0, 0, -458760, 0, 0, -458761, 0, 0, -458762, 0, 0, -458763, 0, 0, -458764, 0, 0, -10, 0, 0, -65546, 0, 0, -131082, 0, 0, -196618, 0, 0, -262154, 0, 0, -327690, 0, 0, -393226, 0, 0, -393227, 0, 0, -393228, 0, 0, -327692, 0, 0, -262156, 0, 0, -196620, 0, 0, -131084, 0, 0, -65548, 0, 0, -12, 0, 0, 65524, 0, 0, 131060, 0, 0, 196596, 0, 0, 262132, 0, 0, 327668, 0, 0, 393204, 0, 0, 458740, 0, 0, 458741, 0, 0, 393205, 0, 0, 327669, 0, 0, 262133, 0, 0, 196597, 0, 0, 131061, 0, 0, 65525, 0, 0, -11, 0, 0, -65547, 0, 0, -131083, 0, 0, -196619, 0, 0, -262155, 0, 0, -327691, 0, 0, 65526, 0, 0, 131062, 0, 0, 196598, 0, 0, 262134, 0, 0, 327670, 0, 0, 393206, 0, 0, 458742, 0, 0, 458743, 0, 0, 393207, 0, 0, 327671, 0, 0, 262135, 0, 0, 196599, 0, 0, 131063, 0, 0, 65527, 0, 0, -9, 0, 0, -65545, 0, 0, -131081, 0, 0, -196617, 0, 0, -262153, 0, 0, -327689, 0, 0, -393225, 0, 0, -393224, 0, 0, -327688, 0, 0, -262152, 0, 0, -196616, 0, 0, -131080, 0, 0, -65544, 0, 0, -8, 0, 0, 65528, 0, 0, 131064, 0, 0, 196600, 0, 0, 262136, 0, 0, 327672, 0, 0, 393208, 0, 0, 458744, 0, 0, 458745, 0, 0, 393209, 0, 0, 327673, 0, 0, 262137, 0, 0, 196601, 0, 0, 131065, 0, 0, 65529, 0, 0, -7, 0, 0, -65543, 0, 0, -131079, 0, 0, -196615, 0, 0, -262151, 0, 0, -327687, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -393218, 0, 0, -393217, 0, 0, -458752, 0, 0, -458751, 0, 0, -458750, 0, 0, -458749, 0, 0, -458748, 0, 0, -458747, 0, 0, -458746, 0, 0, -393210, 0, 0, -327674, 0, 0, -262138, 0, 0, -196602, 0, 0, -131066, 0, 0, -65530, 0, 0, 6, 0, 0, 65542, 0, 0, 131078, 0, 0, 196614, 0, 0, 262150, 0, 0, 327686, 0, 0, 393222, 0, 0, 393221, 0, 0, 393220, 0, 0, 393219, 0, 0, 393218, 0, 0, 393217, 0, 0, 393216, 0, 0, 458751, 0, 0, 458750, 0, 0, 458749, 0, 0, 458748, 0, 0, 458747, 0, 0, 458746, 0, 0, 393223, 0, 0, 327687, 0, 0, 262151, 0, 0, 196615, 0, 0, 131079, 0, 0, 65543, 0, 0, 7, 0, 0, -65529, 0, 0, -131065, 0, 0, -196601, 0, 0, -262137, 0, 0, -327673, 0, 0, -393209, 0, 0, -458745, 0, 0, -458744, 0, 0, -393208, 0, 0, -327672, 0, 0, -262136, 0, 0, -196600, 0, 0, -131064, 0, 0, -65528, 0, 0, 8, 0, 0, 65544, 0, 0, 131080, 0, 0, 196616, 0, 0, 262152, 0, 0, 327688, 0, 0, 393224, 0, 0, 393225, 0, 0, 327689, 0, 0, 262153, 0, 0, 196617, 0, 0, 131081, 0, 0, 65545, 0, 0, 9, 0, 0, -65527, 0, 0, -131063, 0, 0, -196599, 0, 0, -262135, 0, 0, -327671, 0, 0, -393207, 0, 0, -458743, 0, 0, -458742, 0, 0, -393206, 0, 0, -327670, 0, 0, -262134, 0, 0, -196598, 0, 0, -131062, 0, 0, -65526, 0, 0, 10, 0, 0, 65546, 0, 0, 131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 393227, 0, 0, 327691, 0, 0, 262155, 0, 0, 196619, 0, 0, 131083, 0, 0, 65547, 0, 0, 11, 0, 0, -65525, 0, 0, -131061, 0, 0, -196597, 0, 0, -262133, 0, 0, -327669, 0, 0, -393205, 0, 0, -458741, 0, 0)
layer_1/name = "Crops"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array()

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Day" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 553.0
offset_right = 64.0
offset_bottom = 576.0
text = "Day: 0"

[node name="Tool" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 529.0
offset_right = 64.0
offset_bottom = 552.0
text = "Tool"

[node name="Money" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 505.0
offset_right = 69.0
offset_bottom = 528.0
text = "Money: $0"

[node name="Seeds" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 481.0
offset_right = 96.0
offset_bottom = 504.0
text = "Seeds: 0"

[node name="NextDay" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 592.0
offset_right = 95.0
offset_bottom = 623.0
text = "Next Day
"

[node name="BuySeeds" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 592.0
offset_right = 191.0
offset_bottom = 623.0
text = "Buy Seeds"

[node name="DayTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_o3esv")
format = 2
layer_0/tile_data = PackedInt32Array(-393227, 524288, 3, -327691, 524288, 4, -262155, 524288, 4, -196619, 524288, 4, -131083, 524288, 4, -65547, 524288, 4, -11, 524288, 4, 65525, 524288, 4, 131061, 524288, 4, 196597, 524288, 4, 262133, 524288, 4, 327669, 524288, 4, 393205, 524288, 4, 458741, 524288, 5, 458742, 589824, 6, 458743, 589824, 6, 458744, 589824, 3, 458745, 589824, 6, 458746, 589824, 6, 458747, 589824, 3, 458748, 589824, 6, 458749, 589824, 6, 458750, 589824, 3, 458751, 589824, 6, 393216, 589824, 6, 393217, 589824, 3, 393218, 589824, 6, 393219, 589824, 6, 393220, 589824, 3, 393221, 589824, 6, 393222, 589824, 6, 393223, 589824, 3, 393224, 589824, 6, 393225, 589824, 6, -393226, 589824, 6, -393225, 589824, 6, -393224, 589824, 3, -393223, 589824, 6, -393222, 589824, 6, -393221, 589824, 3, -393220, 589824, 6, -393219, 589824, 6, -393218, 589824, 3, -393217, 589824, 6, -458752, 589824, 6, -458751, 589824, 3, -458750, 589824, 6, -458749, 589824, 6, -458748, 589824, 3, -458747, 589824, 6, -458746, 589824, 6, -458745, 589824, 3, -458744, 589824, 6, -458743, 589824, 6, -458742, 655360, 3, -393206, 655360, 4, -327670, 655360, 4, -262134, 655360, 4, -196598, 655360, 4, -131062, 655360, 4, -65526, 655360, 4, 10, 655360, 4, 65546, 655360, 4, 131082, 655360, 4, 196618, 655360, 4, 262154, 655360, 4, 327690, 655360, 4, 393226, 655360, 5, 262134, 131072, 2, -262154, 131072, 2, -196618, 131072, 2, -131082, 131072, 2, -65546, 131072, 2, -10, 131072, 2, 65526, 131072, 2, 131062, 131072, 2, 196598, 131072, 2, 327670, 131072, 2, 393206, 131072, 2, -327690, 327680, 3, -327689, 65536, 3, -327688, 65536, 3, -327687, 65536, 3, -327686, 65536, 3, -327685, 65536, 3, -327684, 65536, 3, -327683, 65536, 3, -327682, 65536, 3, -327681, 65536, 3, -393216, 65536, 3, -393215, 65536, 3, -393214, 65536, 3, -393213, 65536, 3, -393212, 65536, 3, -393211, 65536, 3, -393210, 65536, 3, -393209, 65536, 3, -393208, 65536, 3, -393207, 65536, 3)

[node name="GameAreaBorder" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameAreaBorder"]
position = Vector2(0, 102)
scale = Vector2(1.65, 1.031)
shape = SubResource("WorldBoundaryShape2D_ipol1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GameAreaBorder"]
position = Vector2(-9.09495e-13, -100)
rotation = 3.14159
scale = Vector2(1.65, 1.031)
shape = SubResource("WorldBoundaryShape2D_ipol1")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="GameAreaBorder"]
position = Vector2(-166, -5.18696e-13)
rotation = 1.5708
scale = Vector2(1, 1.088)
shape = SubResource("WorldBoundaryShape2D_ipol1")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="GameAreaBorder"]
position = Vector2(166, 6.39488e-14)
rotation = 4.71239
scale = Vector2(1, 1.087)
shape = SubResource("WorldBoundaryShape2D_ipol1")

[connection signal="pressed" from="CanvasLayer/Control/NextDay" to="." method="_on_next_day_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/BuySeeds" to="." method="_on_buy_seeds_pressed"]
[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
